Fixed offline members disalignment

--- a/Simple-Version/Themes (Can be ignored plus not needed)/Darker-than-Red.theme.css
+++ b/Simple-Version/Themes (Can be ignored plus not needed)/Darker-than-Red.theme.css
@@ -195,7 +195,7 @@ width: 1% !important;
   display: block;
 }
 #app-mount .memberOffline-2lN7gt {
-  margin-left: -2px;
+  margin-left: 6px;
 }
 #app-mount .member-3W1lQa .statusStreaming-2eqoUF {
   border: 2px solid #593695;
