--- a/Simple-Version/Themes (Can be ignored plus not needed)/Lighter-than-Blue.theme.css
+++ b/Simple-Version/Themes (Can be ignored plus not needed)/Lighter-than-Blue.theme.css
@@ -147,7 +147,7 @@ width: 1% !important;
   display: block !important;
 }
 .memberOffline-2lN7gt {
-  margin-left: -2px;
+  margin-left: 6px;
 }
 .member-3W1lQa .statusStreaming-2eqoUF {
   border: 2px solid #593695 !important;
